--- a/public/partials/products.html
+++ b/public/partials/products.html
@@ -54,6 +54,14 @@
                                         <th>ID</th>
                                     </tr>
                                 </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>001</td>                                     
+                                        <td class="thumbnail" ui-sref="product-detail"><img src="http://freenology.com/images/71442946288pineapple.jpg" alt=""></td>
+                                        <td>Pineapples</td>
+                                        <td>{{id}}</td>
+                                    </tr>
+                                </tbody>
                             </table>
                         </div>
                         </div>
