--- a/public/partials/product-detail.html
+++ b/public/partials/product-detail.html
@@ -5,7 +5,7 @@
             <div class="container-fluid">
 
                 <div class="row">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6 comments_panel">
                         <div class="detailBox">
                             <div class="titleBox">
                               <label>Comments</label>
@@ -75,6 +75,7 @@
                         <div>
                            <label class="product_det_name">Product Name</label>
                             <div class="product_detail">
+                                <h3>Price: </h3>
                                 <p class="productid">Product ID</p>
                                 Size: 
                                 <select>
