--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -3,8 +3,8 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="index.html" style="font-weight: 800;font-size: 30px;">RIPe Fruit</a>                
             </div>
-            <span style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right"><i class="fa fa-user"></i> Cart</span>
-            <span style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right"><i class="fa fa-shopping-cart"></i> Account</span>
+            <span style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right"><i class="fa fa-shopping-cart"></i> Cart</span>
+            <span style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right"><i class="fa fa-user"></i> Account</span>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li ui-sref-active="active">
