--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -5,6 +5,8 @@
             </div>
             <span style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right"><i class="fa fa-shopping-cart"></i> Cart</span>
             <span style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right"><i class="fa fa-user"></i> Account</span>
+            <span ui-sref-active="active" style="color:white;color: white;padding-top: 12px;margin-right: 12px; " class="pull-right"><a ui-sref="signin"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign In</a></span>
+            <span style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right"><a ui-sref="signup"><i class="fa fa-pagelines" aria-hidden="true"></i> Sign Up</a></span>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li ui-sref-active="active">
