--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -3,10 +3,15 @@
             <div class="navbar-header">
                 <a class="navbar-brand" href="index.html" style="font-weight: 800;font-size: 30px;">RIPe Fruit</a>                
             </div>
-            <span style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right"><i class="fa fa-shopping-cart"></i> Cart</span>
-            <span style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right"><i class="fa fa-user"></i> Account</span>
+
+            <a style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right" ui-sref="account"><i class="fa fa-user"></i> Account</a>
+
+            <a style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right" ui-sref="cart"><i class="fa fa-shopping-cart"></i> Cart</a>
+
             <span ui-sref-active="active" style="color:white;color: white;padding-top: 12px;margin-right: 12px; " class="pull-right"><a ui-sref="signin"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign In</a></span>
+
             <span style="color:white;color: white;padding-top: 12px;margin-right: 12px;" class="pull-right"><a ui-sref="signup"><i class="fa fa-pagelines" aria-hidden="true"></i> Sign Up</a></span>
+
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li ui-sref-active="active">
