--- a/public/partials/store-detail.html
+++ b/public/partials/store-detail.html
@@ -3,21 +3,21 @@
         <div id="page-wrapper">
             <div class="container-fluid">
                 <div class="row store_detail">
-                    <label class="store_det_name">Store Name</label><br/>
+                    <label class="store_det_name">{{storeDetail.address}}</label><br/>
                     <div class="col-lg-12">
                         <div class="rating">
                             <span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span>
                         </div>
-                        <h6>Store ID: xxxxxxxxx</h6>
+                        <h6>Store ID: {{storeDetail.storeId}}</h6>
                     </div>
                     <div class="col-lg-12 row store_info_panel">
                         
                         <div class="col-lg-5 crop">
-                            <img src="https://s3-media3.fl.yelpcdn.com/bphoto/mLqyD7HK5Mt393348uEWXQ/o.jpg">
+                            <img ng-src="{{storeDetail.photo}}">
                         </div>
                         <div class="col-lg-4 map_area">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d92371.59313268925!2d-79.46299102735114!3d43.65623431891778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x882b34c63f9b87ed%3A0x100ad4ac9f066076!2sBaldwin+Naturals%2C+16+Baldwin+St%2C+Toronto%2C+ON+M5T+1L2!3m2!1d43.656255699999996!2d-79.3929512!5e0!3m2!1sen!2sca!4v1480190512318" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
-                            <p class="store_info_header"><i class="fa fa-map-marker" aria-hidden="true"></i> 16 Baldwin Street, Toronto, ON M5T 1L2, Canada</p>
+                            <p class="store_info_header"><i class="fa fa-map-marker" aria-hidden="true"></i> {{storeDetail.address}}</p>
                             <p class="store_info_header"><i class="fa fa-phone" aria-hidden="true"></i> (416) 979-1777</p>
                         </div>
                         <div class="col-lg-3 store_info">
