can now access user photos for comments, but it seems slighly hacky still

--- a/public/partials/product-detail.html
+++ b/public/partials/product-detail.html
@@ -31,7 +31,7 @@
                                 <ul class="commentList" ng-repeat="comment in fruitDetail.comments">
                                     <li>
                                         <div class="commenterImage">
-                                            <img src="http://placekitten.com/50/50"/>
+                                            <img ng-src="{{comment.user[0].photo}}" />
                                         </div>
                                         <div class="commenterText">
                                             <p class="">{{comment.username}}</p>
