--- a/public/templates/header.html
+++ b/public/templates/header.html
@@ -23,6 +23,12 @@
                     <li ui-sref-active="active">
                         <a ui-sref="seasons"><i class="fa fa-lemon-o"></i> Seasons</a>
                     </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="users"><i class="fa fa-lemon-o"></i> Users</a>
+                    </li>
+                    <li ui-sref-active="active">
+                        <a ui-sref="carts"><i class="fa fa-lemon-o"></i> Carts</a>
+                    </li>
                 </ul>
             </div>
         </nav>
