--- a/public/assets/css/ripe.css
+++ b/public/assets/css/ripe.css
@@ -312,6 +312,10 @@ ul.alert-dropdown {
     width:100%;
     border-radius:50%;
 }
+.commenterText {
+    padding: 4px;
+    font-weight: bold;
+}
 .commentText p {
     margin:0;
 }
@@ -353,6 +357,10 @@ ul.alert-dropdown {
 
 .product_det_name{
     font-size: 3em;
+}
+
+.product_store{
+    font-size: 2em;
 }
 
 .product_info_panel select, .product_info_panel input{
