--- a/public/partials/product-detail.html
+++ b/public/partials/product-detail.html
@@ -1,66 +1,74 @@
-<div id="wrapper">        
+<div id="wrapper">
 
-        <div id="page-wrapper">
+    <div id="page-wrapper">
 
-            <div class="container-fluid">
+        <div class="container-fluid">
+            <div class="table-responsive" ng-if="editMode">
+                    <table class="table table-bordered table-hover table-striped">
+                        <thead>
+
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Price</td>                                  
+                                <td><input type="number" class="form-control" ng-init ="modFruitObj.price = fruitDetail.price" ng-model="modFruitObj.price"></td>                                   
+                            </tr>
+                            <tr>
+                                <td>Photo</td>                                  
+                                <td><input type="text" class="form-control" ng-init ="modFruitObj.photo = fruitDetail.photo" ng-model="modFruitObj.photo"></td>                                   
+                            </tr>
+                            <tr>
+                                <td>Quantity</td>                                  
+                                <td><input type="number" class="form-control" ng-init ="modFruitObj.quantity = fruitDetail.quantity" ng-model="modFruitObj.quantity"></td>                                   
+                            </tr>                                       
+                        </tbody>                                    
+                    </table>
+                    <button type="button" class="btn btn-primary btn-block" style="margin-top: 20px;" ng-click="modCurrentFruit()">Submit</button>
+                    <button type="button" ng-click="toggleEdit()">BACK</button>
+                </div>
+
+            <div class="row fruit_detail" ng-if="!editMode">
+                <div class="col-lg-6 product_info_panel">
+                    <img class="product-pic" ng-src="{{fruitDetail.photo}}" alt=""> <button type="button" ng-click="toggleEdit()">EDIT</button>
+                </div>
+                <br class="col-lg-6 product_info_panel">
+                    <label class="product_det_name">{{fruitDetail.type}}</label></br>
+                    <label class="product_store">Store: {{fruitDetail.storeId}}</label>
+                    <div class="product_detail">
+                        <h3>Price: ${{fruitDetail.price | number : 2}}</h3>
+                        <p class="productid">{{fruitDetail._id}}</p>
+                        Size: {{fruitDetail.unit}}
+                        <br/>
+                        <br/>
+                        Qty: <input type="number" name="quantity" min="1" max="20">
+                        <a href="#" class="add-to-cart">Add to Cart</a>
+                    </div>
+                </div>
 
                 <div class="row">
-                    <div class="col-lg-6 comments_panel">
+                    <div class="col-lg-8 comments_panel">
                         <div class="detailBox">
                             <div class="titleBox">
-                              <label>Comments</label>
+                                <label>Comments</label>
                             </div>
                             <div class="actionBox">
-                                <ul class="commentList">
+                                <ul class="commentList" ng-repeat="comment in fruitDetail.comments">
                                     <li>
                                         <div class="commenterImage">
-                                          <img src="http://placekitten.com/50/50" />
+                                            <img src="http://placekitten.com/50/50"/>
+                                        </div>
+                                        <div class="commenterText">
+                                            <p class="">{{comment.username}}</p>
                                         </div>
                                         <div class="commentText">
-                                            <p class="">My favourite pineapple is from store #1243</p> <span class="date sub-text">on March 5th, 2014</span>
-
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="commenterImage">
-                                          <img src="http://placekitten.com/45/45" />
-                                        </div>
-                                        <div class="commentText">
-                                            <p class="">Their pineapples suck! Will never buy from here again</p> <span class="date sub-text">on March 5th, 2014</span>
-
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="commenterImage">
-                                          <img src="http://placekitten.com/40/40" />
-                                        </div>
-                                        <div class="commentText">
-                                            <p class="">PPAP Pen Pineapple Apple Pen.</p> <span class="date sub-text">on March 5th, 2014</span>
-
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="commenterImage">
-                                          <img src="http://placekitten.com/40/41" />
-                                        </div>
-                                        <div class="commentText">
-                                            <p class="">BEST, PINEAPPLES, EVA</p> <span class="date sub-text">on March 5th, 2014</span>
-
-                                        </div>
-                                    </li>
-                                    <li>
-                                        <div class="commenterImage">
-                                          <img src="http://placekitten.com/40/45" />
-                                        </div>
-                                        <div class="commentText">
-                                            <p class="">We got 10 last week, made some pineapple juice and it was gone like that</p> <span class="date sub-text">on March 5th, 2014</span>
-
+                                            <p class="">{{comment.message}}</p>
+                                            <span class="date sub-text">on {{comment.created}}</span>
                                         </div>
                                     </li>
                                 </ul>
                                 <form class="form-inline" role="form">
                                     <div class="form-group">
-                                        <input class="form-control" type="text" placeholder="Your comments" />
+                                        <input class="form-control" type="text" placeholder="Your comments"/>
                                     </div>
                                     <div class="form-group">
                                         <button class="btn btn-default">Add</button>
@@ -70,36 +78,9 @@
                         </div>
 
                     </div>
-                    <div class="col-lg-6 product_info_panel">
-                        <img class="product-pic" ng-src="{{fruitDetail.photo}}" alt="">
-                        <div>
-                           <label class="product_det_name">{{fruitDetail.type}}</label>
-                            <div class="product_detail">
-                                <h3>Price: {{fruitDetail.price}}</h3>
-                                <p class="productid">{{fruitDetail._id}}</p>
-                                Size: 
-                                <select>
-                                  <option value="small">Small</option>
-                                  <option value="medium">Medium</option>
-                                  <option value="large">Large</option>
-                                </select>
-                                <br/>
-                                Store:
-                                <select>
-                                  <option value="small">Store1</option>
-                                  <option value="medium">Store2</option>
-                                  <option value="large">Store3</option>
-                                </select>
-                                <br/>
-                                Qty: <input type="number" name="quantity" min="1" max="20">
-                                <a href="#" class="add-to-cart">Add to Cart</a>
-                            </div>
-                        </div>
-                    </div>
+
                 </div>
-
             </div>
-
         </div>
 
 </div>
