--- a/public/partials/signin.html
+++ b/public/partials/signin.html
@@ -6,9 +6,10 @@
                 <h1>Sign In</h1>
                 <br/>
                 <form>
-                    <p>Email: <input type="email" name="email"></p>
-                    <p>Password: <input type="password" name="psw"></p>
-                    <input type="submit" value="Submit">
+                    <p>Username: <input ng-model = "userCred.username" type="text" name="username"></p>
+                    <p>Password: <input ng-model = "userCred.password" type="password" name="psw"></p>
+                    <!-- <input type="submit" value="Submit"> -->
+                    <button ng-click="signIn()">Sign In</button>
                 </form>
             </div>
             <!-- /.container-fluid -->
