--- a/public/partials/stores.html
+++ b/public/partials/stores.html
@@ -53,19 +53,19 @@
                                         <th>Name</th>
                                         <th>ID</th>
                                         <th>Address</th>
-                                        <th>Rate Count</th>
-                                        <th>Rate Value</th>
+                                        <th>Rating</th>
+                                        <th></th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     <tr ng-repeat="store in storesList track by $index">
-                                        <td>{{$index}}</td>                                     
+                                        <td>{{$index+1}}</td>                                     
                                         <td ui-sref="store-detail({storeid: store.storeId})"><img ng-src="{{store.photo}}" alt=""></td>
                                         <td>{{store.name}}</td>
                                         <td>{{store.storeId}}</td>
-                                        <td>{{store.address}}</td>
-                                        <td>{{store.rateCount}}</td>
-                                        <td>{{store.rateValue}}</td>
+                                        <td>{{store.address.street}}, {{store.address.city}}, {{store.address.province}}, {{store.address.postalcode}}</td>
+                                        <td>{{store.rateValue / store.rateCount | number : 0}}</td>
+                                        <td><button ng-click="deleteThisStore(store.storeId)">DELETE</button></td>
                                     </tr>
                                 </tbody>
                             </table>
