--- a/public/partials/product-detail.html
+++ b/public/partials/product-detail.html
@@ -4,11 +4,9 @@
 
         <div class="container-fluid">
             <div class="row fruit_detail">
-                <div class="col-lg-6 product_info_panel">
+                <div class="col-lg-3 product_info_panel">
+                    <label class="product_det_name">{{fruitDetail.type}}</label><br/>
                     <img class="product-pic" ng-src="{{fruitDetail.photo}}" alt="">
-                </div>
-                <br class="col-lg-6 product_info_panel">
-                    <label class="product_det_name">{{fruitDetail.type}}</label></br>
                     <label class="product_store">Store: {{fruitDetail.storeId}}</label>
                     <div class="product_detail">
                         <h3>Price: ${{fruitDetail.price | number : 2}}</h3>
@@ -20,43 +18,42 @@
                         <a href="#" class="add-to-cart">Add to Cart</a>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col-lg-8 comments_panel">
-                        <div class="detailBox">
-                            <div class="titleBox">
-                                <label>Comments</label>
-                            </div>
-                            <div class="actionBox">
-                                <ul class="commentList" ng-repeat="comment in fruitDetail.comments">
-                                    <li>
-                                        <div class="commenterImage">
-                                            <img src="http://placekitten.com/50/50"/>
-                                        </div>
-                                        <div class="commenterText">
-                                            <p class="">{{comment.username}}</p>
-                                        </div>
-                                        <div class="commentText">
-                                            <p class="">{{comment.message}}</p>
-                                            <span class="date sub-text">on {{comment.created}}</span>
-                                        </div>
-                                    </li>
-                                </ul>
-                                <form class="form-inline" role="form">
-                                    <div class="form-group">
-                                        <input class="form-control" type="text" placeholder="Your comments"/>
-                                    </div>
-                                    <div class="form-group">
-                                        <button class="btn btn-default">Add</button>
-                                    </div>
-                                </form>
-                            </div>
+            </div>
+            <!-- beginning of comments -->
+            <div class="row">
+                <div class="col-lg-8 comments_panel">
+                    <div class="detailBox">
+                        <div class="titleBox">
+                            <label>Comments</label>
                         </div>
-
+                        <div class="actionBox">
+                            <ul class="commentList" ng-repeat="comment in fruitDetail.comments">
+                                <li>
+                                    <div class="commenterImage">
+                                        <img src="http://placekitten.com/50/50"/>
+                                    </div>
+                                    <div class="commenterText">
+                                        <p class="">{{comment.username}}</p>
+                                    </div>
+                                    <div class="commentText">
+                                        <p class="">{{comment.message}}</p>
+                                        <span class="date sub-text">on {{comment.created}}</span>
+                                    </div>
+                                </li>
+                            </ul>
+                            <form class="form-inline" role="form">
+                                <div class="form-group">
+                                    <input class="form-control" type="text" placeholder="Your comments"/>
+                                </div>
+                                <div class="form-group">
+                                    <button class="btn btn-default">Add</button>
+                                </div>
+                            </form>
+                        </div>
                     </div>
-
                 </div>
             </div>
+            <!-- end of comments -->
         </div>
 
 </div>
