--- a/public/partials/products.html
+++ b/public/partials/products.html
@@ -1,4 +1,4 @@
-<div id="wrapper">        
+<div id="wrapper">
 
         <div id="page-wrapper">
 
@@ -34,6 +34,12 @@
                             </div>
                         </div>
                     </div>
+                    <div class="season col-lg-9 col-md-6">
+                        <button ng-click="getFruitsForSeason('fall')" class="seasonname">Fall</button >
+                        <button ng-click="getFruitsForSeason('winter')" class="seasonname">Winter</button>
+                        <button ng-click="getFruitsForSeason('spring')" class="seasonname">Spring</button >
+                        <button ng-click="getFruitsForSeason('summer')" class="seasonname">Summer</button>
+                    </div>
 
                 </div>
                 <!-- /.row -->
@@ -59,8 +65,8 @@
                                 </thead>
                                 <tbody>
                                     <tr ng-repeat="fruit in fruitsList track by $index">
-                                        <td>{{$index}}</td>                                     
-                                        <td ui-sref="fruit-detail({fruitid: fruit._id})"><img ng-src="{{fruit.photo}}" alt=""></td>
+                                        <td>{{$index}}</td>
+                                        <td class="product_page_thumb" ui-sref="fruit-detail({fruitid: fruit._id})"><img ng-src="{{fruit.photo}}" alt=""></td>
                                         <td>{{fruit.type}}</td>
                                         <td>${{fruit.price | number : 2}}</td>
                                         <td>{{fruit.quantity}}</td>
