--- a/public/partials/stores.html
+++ b/public/partials/stores.html
@@ -1,4 +1,4 @@
-<div id="wrapper">        
+<div id="wrapper">
 
         <div id="page-wrapper">
 
@@ -58,8 +58,8 @@
                                 </thead>
                                 <tbody>
                                     <tr ng-repeat="store in storesList track by $index">
-                                        <td>{{$index}}</td>                                     
-                                        <td ui-sref="store-detail({storeid: store.storeId})"><img ng-src="{{store.photo}}" alt=""></td>
+                                        <td>{{$index}}</td>
+                                        <td class="store_page_thumb" ui-sref="store-detail({storeid: store.storeId})"><img ng-src="{{store.photo}}" alt=""></td>
                                         <td>{{store.name}}</td>
                                         <td>{{store.storeId}}</td>
                                         <td>{{store.address.street}}, {{store.address.city}}, {{store.address.province}}, {{store.address.postalcode}}</td>
